# thesaurus

./: .gitignore  pyproject.toml  setup.cfg
thesaurus/: thesaurus.py
