[metadata]
name = thesaurus
version = 0.0.1
author = Karam Shbeb
author_email = karam.shbeb1@hotmail.com
description = My package description
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = thesaurus, NLP
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_metadata = True